new commit (automatic message)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,9 +12,9 @@ akka {
 
 custom {
   queue {
-    name = "changeme"
+    name = "AkkaHttpScalaDockerHandsOn"
   }
   stocks {
-    api-key = "changeme"
+    api-key = "6EJszAk6MoAeyzhURQaC"
   }
 }
