added comments + full async code

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,9 +15,9 @@ custom {
     name = "AkkaHttpScalaDockerHandsOn"
   }
   stocks {
-    api-key = "changeme"
+    api-key = "6EJszAk6MoAeyzhURQaC"
   }
   messages{
-    body = "changeme"
+    body = "foobar baz quux"
   }
 }
