--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,7 +15,7 @@ custom {
     name = "AkkaHttpScalaDockerHandsOn"
   }
   stocks {
-    api-key = "changeme"
+    api-key = "6EJszAk6MoAeyzhURQaC"
   }
   messages{
     body = "changeme"
