--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,12 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+**/target
 
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
 .idea
+.env
+version.txt
+
